# bug-report-rust

./: README.md  docker-compose.yml
frontend/: .eslintrc.json  dev.Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  react-query-wrapper.tsx
frontend/app/[id]/: page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/create/: page.tsx
frontend/app/edit/[id]/: edit.tsx  page.tsx
frontend/app/login/: page.tsx  schema.ts
frontend/app/register/: page.tsx
frontend/components/: Navbar.tsx  bug-report.tsx  modal.tsx
frontend/components/auth/: page.tsx  schema.ts
frontend/components/bug-report/: bug-report.tsx  form.tsx  schema.ts  status-select.tsx
frontend/components/wrappers/: next-auth.tsx  react-query.tsx  token.tsx
frontend/hooks/: auth.ts  bug-reports.ts
frontend/pages/api/auth/: [...nextauth].ts
frontend/types/: next-auth.d.ts  types.ts
frontend/utils/: api.ts
migrations/: 20230515151516_init.down.sql  20230515151516_init.up.sql
rust-backend/: Cargo.toml  dev.Dockerfile  sqlx-data.json
rust-backend/src/: config.rs  error.rs  extractors.rs  lib.rs  main.rs  models.rs  schema.rs
rust-backend/src/services/: auth.rs  bug_report.rs  mod.rs
rust-backend/tests/: integration.rs
rust-backend/tests/common/: mod.rs
