[package]
name = "bug-report-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = {version = "1.0.163", features= ["derive"]}
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = [ "runtime-actix-native-tls", "chrono", "uuid", "postgres", "macros" ] }
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
