[package]
name = "bug-report-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = {version = "1.0.163", features= ["derive"]}
serde_json = "1.0.96"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = [ "runtime-actix-native-tls", "chrono", "uuid", "postgres", "macros" ] }
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
jsonwebtoken = "8.3.0 "
argon2 = "0.5.0"
serde_qs = "0.12.0"
envy = "0.4.2"
actix-http = "3.3.1"
log = "0.4.17"
thiserror = "1.0.40"